Fix alignment issue of instructions and training model elements to make responsive

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -21,7 +21,7 @@
     .instructions-list {
         padding-inline-start: 0 !important;
         margin: 0 1rem;
-        max-width: 500px;
+        max-width: 30rem;
         .instructions-step {
             list-style-type: none;
             display: flex;
